# alander

./: .gitignore  Alander技术实施指南.md  Alander敏捷开发实施指南.md  Alander详细开发计划.md  Cargo.toml  README-zh.md  README.md
alander_core/: Cargo.toml
alander_core/examples/: test_ecs.rs
alander_core/src/: assets.rs  lib.rs
alander_editor/: Cargo.toml
alander_editor/src/: app.rs  camera_controller.rs  editor_command.rs  gizmo_manager.rs  main.rs  physics_manager.rs  scene_manager.rs  script_manager.rs
alander_editor/src/ui/: asset_browser.rs  hierarchy.rs  inspector.rs  menu_bar.rs  mod.rs  simulation_bar.rs  timeline.rs
alander_render/: Cargo.toml
alander_render/examples/: basic_window.rs
alander_render/src/: lib.rs  resource_manager.rs  texture.rs
alander_render/src/pipelines/: common.rs  debug.rs  mesh.rs  mod.rs  post_process.rs  shadow.rs  skybox.rs  ssao.rs
alander_render/src/renderer/: mod.rs
alander_render/src/shaders/: bloom.wgsl  debug.wgsl  equirect_to_cube.wgsl  mesh.wgsl  normal_pass.wgsl  post_process.wgsl  shadow.wgsl  skybox.wgsl  ssao.wgsl
alander_render/src/utils/: mod.rs
alander_wasm/: Cargo.toml
alander_wasm/src/: lib.rs
doc/: Alander 软件架构与功能规划.md  动画操作教程.md  开发计划.md  技术路线.md
todo/: 1、第一阶段：修复和完善渲染管线** ✅（已基本完成）.md  2、第二阶段：集成EGUI界面框架.md  final 功能.md  todo.md
