[workspace]
members = [
    "alander_core",
    "alander_render",
    "alander_editor",
    "alander_wasm"
]
resolver = "2"

# 工作区级别的依赖版本管理
[workspace.dependencies]
# 核心框架
winit = "0.28"
wgpu = "0.17"
egui = "0.23"
egui_dock = "0.8"
egui_node_graph = "0.17"

# ECS架构
bevy_ecs = "0.12" # 或 hecs = "0.10"

# 数学库
glam = { version = "0.24", features = ["serde"] } # 快速 SIMD 优化的数学库

# 图形相关
gltf = "1.4" # glTF加载
image = "0.24"

# 物理引擎
rapier3d = "0.17"

# 序列化
serde = { version = "1.0", features = ["derive"] }
ron = "0.8" # 人类可读的数据格式

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 网络协作
matchbox_socket = "0.7"

# WebAssembly相关
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
