[package]
name = "alander_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# 使用工作区定义的版本
bevy_ecs = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.4", features = ["v4", "serde"] }
winit = { workspace = true }
thiserror = "1.0"
gltf = "1.4"
image = "0.24"
rapier3d = { workspace = true }
rhai = { version = "1.16", features = ["sync", "serde"] }

[features]
test = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
