[package]
name = "alander_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alander"
path = "src/main.rs"

[dependencies]
# 核心模块
alander_core = { path = "../alander_core" }
alander_render = { path = "../alander_render" }

# ECS框架
bevy_ecs = { workspace = true }

# UI框架
egui = { workspace = true }
egui_dock = { workspace = true }
egui-winit = "0.23"
egui-wgpu = "0.23"

# 窗口和输入
winit = { workspace = true }
wgpu = { workspace = true }
raw-window-handle = "0.6.2"

# 图像处理
image = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 数学库
glam = { workspace = true }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 其他工具
anyhow = "1.0"
bytemuck = "1.4"
cgmath = "0.18"
pollster = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
rfd = "0.12"
rapier3d = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
sysinfo = "0.29"
rhai = { version = "1.16", features = ["sync", "serde", "f32_float"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { version = "1.0", features = ["color"] }
wgpu = { workspace = true, features = ["webgl"] }
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
