[package]
name = "alander_render"
version = "0.1.0"
edition = "2021"

[dependencies]
alander_core = { path = "../alander_core" }
winit = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18"
pollster = "0.3"
tracing = { workspace = true }
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = "1.0"
wgpu = { workspace = true, features = ["webgl"] }
